/*
Copyright IBM Corp. 2017 All Rights Reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

		 http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package protos;

import "protos/readiness.proto";

// VnfConfigRequest is used to be sent from Pong VNFM to the VNF/CNF in order to configure it
message PongVnfConfigRequest {
    string message = 1;
}

message PongVnfConfigResponse {}

service PongVnf {
    rpc Configure (PongVnfConfigRequest) returns (PongVnfConfigResponse) {};
    rpc ReadinessCheck (ReadinessRequest) returns (ReadinessResponse) {};
}
